Login implementado, mas com erro de network fetch