@@ -1,22 +1,16 @@
 package com.bruno.restapi.auth.config;
 
 import com.bruno.restapi.auth.filter.JwtAuthenticationFilter;
-import com.bruno.restapi.auth.service.UsuarioDetailsService;
 import com.bruno.restapi.auth.util.Role;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -25,84 +19,61 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
-@AllArgsConstructor
 @Configuration
 @EnableWebSecurity
+@AllArgsConstructor
 public class SecurityConfig {
 
-    private final UsuarioDetailsService usuarioDetailsService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final AuthenticationProvider authenticationProvider;
 
+    // 1. CONFIGURAÇÃO DE CORS (Crucial para o React funcionar)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Permite requisições vindas do seu frontend (React)
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        // Permite a origem do seu Frontend (Vite/React)
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        // Permite os métodos HTTP necessários
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Permite os cabeçalhos (incluindo Authorization para o Token)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity
-                .sessionManagement(c -> c.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .csrf(c -> c.disable())
-                .cors(c -> c.configurationSource(corsConfigurationSource()))
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                .csrf(csrf -> csrf.disable())
+                // 2. Aplica a configuração de CORS definida acima
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                .authorizeHttpRequests(authorize -> authorize
-                        // --- ROTAS PÚBLICAS ---
-                        // Login e Cadastro de Usuários são públicos
+                .authorizeHttpRequests(auth -> auth
+                        // Rotas Públicas
                         .requestMatchers(HttpMethod.POST, "/autenticacao/login").permitAll()
                         .requestMatchers(HttpMethod.POST, "/usuarios").permitAll()
 
-                        // --- ROTAS DE ALUNOS (TRABALHO 07) ---
-                        // Ver alunos: Qualquer usuário logado (USER ou ADMIN)
+                        // Rotas Protegidas (Exemplo Alunos)
                         .requestMatchers(HttpMethod.GET, "/alunos/**").hasAnyRole(Role.USER.name(), Role.ADMIN.name())
-                        // .requestMatchers(HttpMethod.GET, "/alunos/**").authenticated() // Alternativa se quiser apenas checar login
-
-                        // Cadastrar, Alterar e Remover alunos: APENAS ADMIN
                         .requestMatchers(HttpMethod.POST, "/alunos/**").hasRole(Role.ADMIN.name())
                         .requestMatchers(HttpMethod.PUT, "/alunos/**").hasRole(Role.ADMIN.name())
                         .requestMatchers(HttpMethod.DELETE, "/alunos/**").hasRole(Role.ADMIN.name())
 
-                        // --- OUTRAS ROTAS ---
-                        // Exemplo: rotas de Turma, Disciplina, etc (se precisar restringir)
-                        // .requestMatchers(HttpMethod.POST, "/turmas/**").hasRole(Role.ADMIN.name())
-
-                        // Qualquer outra rota não especificada acima exige autenticação
-                        .anyRequest().authenticated())
-
+                        .anyRequest().authenticated()
+                )
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .exceptionHandling(c -> {
-                    c.authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED));
-                    c.accessDeniedHandler((request, response, accessDeniedException) -> {
-                        response.setStatus(HttpStatus.FORBIDDEN.value());
-                    });
+                .exceptionHandling(ex -> {
+                    ex.authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED));
+                    ex.accessDeniedHandler((req, res, e) -> res.setStatus(HttpStatus.FORBIDDEN.value()));
                 });
 
-        return httpSecurity.build();
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-        var provider = new DaoAuthenticationProvider();
-        provider.setPasswordEncoder(passwordEncoder());
-        provider.setUserDetailsService(usuarioDetailsService);
-        return provider;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
+        return http.build();
     }
 }
